# rules_zig

./: MODULE.bazel  README.md
e2e/workspace/: WORKSPACE.bazel
zig/: BUILD.bazel  defs.bzl  repositories.bzl
zig/config/mode/: BUILD.bazel
zig/config/threaded/: BUILD.bazel
zig/private/: resolved_toolchain.bzl  settings.bzl  versions.bzl  zig_binary.bzl  zig_configure.bzl  zig_module.bzl  zig_test.bzl  zig_toolchain.bzl  zls_completion.bzl
zig/private/bzlmod/: zig.bzl
zig/private/common/: bazel_builtin.bzl  cdeps.bzl  zig_build.bzl  zig_lib_dir.bzl  zig_translate_c.bzl
zig/private/providers/: zig_module_info.bzl  zig_settings_info.bzl  zig_toolchain_info.bzl
zig/private/repo/: zig_repository.bzl
zig/runfiles/: BUILD.bazel  runfiles.zig
zig/runfiles/src/: Manifest.zig  RepoMapping.zig  Runfiles.zig
zig/settings/: BUILD.bazel
