load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load(
    "//zig/private:settings.bzl",
    "MODE_VALUES",
    "settings",
)

settings(
    name = "settings",
    mode = ":mode",
    single_threaded = ":single_threaded",
    strip = select({
        "//zig/config/mode:is_strip_always": True,
        "//zig/config/mode:is_strip_sometimes_fastbuild": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)

string_flag(
    name = "mode",
    build_setting_default = "auto",
    values = MODE_VALUES,
    visibility = ["//zig/config/mode:__pkg__"],
)

bool_flag(
    name = "single_threaded",
    build_setting_default = False,
    visibility = ["//zig/config/threaded:__pkg__"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [":BUILD.bazel"],
    visibility = ["//zig:__pkg__"],
)
