config_setting(
    name = "debug",
    flag_values = {
        "//zig/settings:mode": "debug",
    },
)

config_setting(
    name = "release_safe",
    flag_values = {
        "//zig/settings:mode": "release_safe",
    },
)

config_setting(
    name = "release_small",
    flag_values = {
        "//zig/settings:mode": "release_small",
    },
)

config_setting(
    name = "release_fast",
    flag_values = {
        "//zig/settings:mode": "release_fast",
    },
)

config_setting(
    name = "is_strip_always",
    values = {
        "strip": "always",
    },
)

config_setting(
    name = "is_strip_sometimes_fastbuild",
    values = {
        "strip": "sometimes",
        "compilation_mode": "fastbuild",
    },
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [":BUILD.bazel"],
    visibility = ["//zig/config:__pkg__"],
)
